# frugal

./: .gitignore
compiler/: compiler.go
compiler/generator/: generator.go
compiler/generator/rust/: generator.go
compiler/parser/: types.go
lib/rust/: Cargo.toml
lib/rust/src/: buffer.rs  context.rs  errors.rs  lib.rs  middleware.rs  processor.rs  protocol.rs  provider.rs  service.rs  transport.rs  util.rs
lib/rust/src/transport/: http.rs  mod.rs
lib/rust/src/transport/http/: client.rs  mod.rs  server.rs
lib/rust/src/transport/nats/: client.rs  mod.rs  server.rs
lib/rust/tests/: http_transport.rs  nats_transport.rs
lib/rust/thrift/: Cargo.toml
lib/rust/thrift/src/: errors.rs  lib.rs
lib/rust/thrift/src/protocol/: binary.rs  compact.rs  mod.rs
lib/rust/thrift/src/server/: mod.rs  multiplexed.rs  threaded.rs
lib/rust/thrift/src/transport/: buffered.rs  framed.rs  mem.rs  mod.rs  socket.rs
rust_test/: rust_test.frugal
rust_test/nats/actual_base_rust/: Cargo.toml
rust_test/nats/actual_base_rust/src/: basefoo_service.rs  lib.rs
test/: rust_test.go
test/expected/rust/actual_base_rust/: Cargo.toml
test/expected/rust/actual_base_rust/src/: basefoo_service.rs  lib.rs
test/expected/rust/intermediate_include/src/: intermediatefoo_service.rs  lib.rs
test/expected/rust/subdir_include/src/: lib.rs
test/expected/rust/valid_structs/src/: lib.rs
test/expected/rust/valid_types/src/: lib.rs
test/expected/rust/variety/src/: foo_service.rs  footransitivedeps_service.rs  lib.rs
test/idl/: base.frugal
