[package]
name = "frugal"
version = "2.23.0"
authors = ["Tanner Miller <tanner.miller+github@webfilings.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
byteorder = "1.2"
crossbeam = "0.5"
futures = "0.1"
hyper = "0.12"
lazy_static = "1.2"
log = "0.4"
mime = "0.3"
nats = "0.3"
rand = "0.5"
thrift = { path = "./thrift" }
tokio-core = "0.1"
tower-service = "0.1"
tower-web = "0.3"
uuid = { version = "0.7", features = ["v4"] }
