[package]
name = "frugal"
version = "2.23.0"
authors = ["Tanner Miller <tanner.miller+github@webfilings.com>"]
edition = "2018"

[dependencies]
base64 = "0.11"
byteorder = "1.2"
crossbeam = "0.7"
#futures = "0.1"
hyper = "0.12"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
nats = "0.3"
rand = "0.7"
thrift = { path = "./thrift" }
#tokio-core = "0.1"
uuid = { version = "0.8", features = ["v4"] }
