[package]
name = "frugal"
version = "2.23.0"
authors = ["Tanner Miller <tanner.miller+github@webfilings.com>"]
edition = "2018"

[dependencies]
base64 = "0.11"
bytes = "0.5"
async-trait = "0.1"
byteorder = "1.2"
crossbeam = "0.7"
futures-core = "0.3"
lazy_static = "1.4"
tide = "0.6"
log = "0.4"
reqwest = "0.10"
mime = "0.3"
nats = "0.3"
rand = "0.7"
http = "0.1"
thrift = { path = "./thrift" }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
